// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`displayWeatherBriefing - Phase D 配色言語 > NO_COLOR snapshot: multi 1`] = `
"
                                                                                
 ◆◆ 記録的短時間大雨                                                            
                                                                                
╔══════════════════════════════════════════════════════════════════════════════╗
║ 気象防災速報  発表  [緊急]                                                   ║
║ 滋賀県気象防災速報（短時間大雪）                                             ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ 長浜市余呉町柳ヶ瀬で２４日６時までの６時間で３７センチの顕著な降雪を観測しま ║
║ した。この強い雪は２４日夜遅くにかけて続く見込みです。湖北では、             ║
║ 深刻な交通障害の発生するおそれが高まっています。                             ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ [対象地域]                                                                   ║
║   北部, 南部                                                                 ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ [観測実況・予測]                                                             ║
║   長浜市余呉町柳ケ瀬 (雪の実況): ３７センチ (37cm)  06:00                    ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ VPBS50  2024-01-24 06:13:13  気象庁                                          ║
╚══════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`displayWeatherBriefing - Phase D 配色言語 > NO_COLOR snapshot: nonLevelSpecial 1`] = `
"
                                                                                
 ◆◆ 線状降水帯発生                                                              
                                                                                
╔══════════════════════════════════════════════════════════════════════════════╗
║ 気象防災速報  発表  [緊急]                                                   ║
║ 千葉県気象防災速報（線状降水帯発生）                                         ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ 千葉県北西部、北東部、南部では、線状降水帯による非常に激しい雨が同じ場所で降 ║
║ り続いています。命に危険が及ぶ災害発生の危険度が急激に高まっています。       ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ [対象地域]                                                                   ║
║   北西部, 北東部, 南部                                                       ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ [観測実況・予測]                                                             ║
║   北西部 (線状降水帯): 線状降水帯発生  10:10                                 ║
║   北東部 (線状降水帯): 線状降水帯発生  10:10                                 ║
║   南部 (線状降水帯): 線状降水帯発生  10:10                                   ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ VPBS50  2023-09-08 10:19:00  気象庁                                          ║
╚══════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`displayWeatherBriefing - Phase D 配色言語 > NO_COLOR snapshot: nonLevelWarning 1`] = `
"
╔══════════════════════════════════════════════════════════════════════════════╗
║ 気象防災速報  発表  [警告]                                                   ║
║ 滋賀県気象防災速報（短時間大雪）                                             ║
╠══════════════════════════════════════════════════════════════════════════════╣
║  短時間大雪                                                                  ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ 長浜市余呉町柳ヶ瀬で２４日６時までの６時間で３７センチの顕著な降雪を観測しま ║
║ した。この強い雪は２４日夜遅くにかけて続く見込みです。湖北では、             ║
║ 深刻な交通障害の発生するおそれが高まっています。                             ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ [対象地域]                                                                   ║
║   北部                                                                       ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ [観測実況・予測]                                                             ║
║   長浜市余呉町柳ケ瀬 (雪の実況): ３７センチ (37cm)  06:00                    ║
╠══════════════════════════════════════════════════════════════════════════════╣
║ VPBS50  2024-01-24 06:13:13  気象庁                                          ║
╚══════════════════════════════════════════════════════════════════════════════╝
"
`;

exports[`displayWeatherBriefing - Phase D 配色言語 > NO_COLOR snapshot: 取消 1`] = `
"
                                                                                
 ▼ 取消 気象防災速報                                                            
                                                                                
┌──────────────────────────────────────────────────────────────────────────────┐
│ 気象防災速報  取消  [取消]                                                   │
│ 千葉県気象防災速報（線状降水帯発生）                                         │
├──────────────────────────────────────────────────────────────────────────────┤
│ 気象防災速報は取り消されました                                               │
├──────────────────────────────────────────────────────────────────────────────┤
│ VPBS50  2023-09-08 10:19:00  気象庁                                          │
└──────────────────────────────────────────────────────────────────────────────┘
"
`;
